<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/titulo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txFrequencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frequencia" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data" />

                    <TextView
                        android:id="@+id/txDiaDaSemana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dia_da_semana" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txHorario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/horario"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>