<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:fillViewport="true"
    tools:context=".fragment.ParoquiaHistoriaFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txInfoParoquiaHistoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingBottom="16dp"
            android:text="@string/info_paroquia"
            android:textAlignment="center"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txInputPadroeiro"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editPadroeiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_church_2"
                android:drawablePadding="8dp"
                android:hint="@string/padroeiro" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txImputDataFundacao"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editDataFundacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/data_fundacao" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txInputHistoria"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editHistoria"
                android:layout_width="match_parent"
                android:drawablePadding="8dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_history"
                android:gravity="start"
                android:hint="@string/historia_paroquia"
                android:minLines="5" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>