<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroMissaActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="16dp">

            <TextView
                android:id="@+id/txMissa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:paddingBottom="16dp"
                android:text="@string/missa_descricao"
                android:textAlignment="center"
                android:textSize="20sp"
                android:typeface="normal"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />


            <TextView
                android:id="@+id/txDiaDaSemana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:text="@string/selecione_frequencia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txMissa" />

            <RelativeLayout
                android:id="@+id/relativeFrequencia"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:foregroundGravity="center"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txDiaDaSemana">


                <android.support.design.widget.TextInputLayout

                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:focusable="false">

                    <android.support.design.widget.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerFrequencia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:spinnerMode="dialog" />
            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputTitulo"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeFrequencia">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_title"
                    android:drawablePadding="8dp"
                    android:hint="@string/titulo" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/relativeData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/relativeDiasDaSemana">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputData"
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_calendar"
                        android:drawablePadding="8dp"

                        android:focusable="false"
                        android:hint="@string/data"
                        android:inputType="date" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>


            <TextView
                android:id="@+id/txDiasDaSemana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:text="@string/selecione_dia_semana"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputTitulo" />

            <RelativeLayout
                android:id="@+id/relativeDiasDaSemana"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txDiasDaSemana">


                <android.support.design.widget.TextInputLayout

                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:focusable="false">

                    <android.support.design.widget.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerDiaDaSemana"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:spinnerMode="dialog" />
            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputHorario"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/relativeData">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editHorario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_clock_black"
                    android:drawablePadding="8dp"
                    android:focusable="false"
                    android:hint="@string/horario" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputObservacao"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputHorario">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editObservacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_importante_note"
                    android:drawablePadding="8dp"
                    android:hint="@string/observacao"
                    android:minLines="5" />
            </android.support.design.widget.TextInputLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <include
        android:id="@+id/include2"
        layout="@layout/loading_layout" />

    <include
        android:id="@+id/include4"
        layout="@layout/float_button_save_layout" />
</android.support.constraint.ConstraintLayout>